[gd_scene format=4 uid="uid://cwq3ptpnh8glh"]

[ext_resource type="Texture2D" uid="uid://6feq7ttuddh6" path="res://Assets/tile.png" id="1_dopym"]
[ext_resource type="Texture2D" uid="uid://c5f6vfighvf6m" path="res://Assets/wall.png" id="2_ootpb"]
[ext_resource type="Script" uid="uid://dl16vg1dui0gh" path="res://event_handler.gd" id="3_ootpb"]
[ext_resource type="PackedScene" uid="uid://d2024ewd2ayov" path="res://robber.tscn" id="4_v8kj3"]
[ext_resource type="PackedScene" uid="uid://dsqfu6vy6ee13" path="res://guard.tscn" id="5_crycw"]
[ext_resource type="PackedScene" uid="uid://bkudit1urnh41" path="res://flashlight.tscn" id="6_crycw"]
[ext_resource type="PackedScene" uid="uid://dg32mv1p20fmu" path="res://speaker.tscn" id="7_i2041"]
[ext_resource type="PackedScene" uid="uid://c0cyr3ua7d5s5" path="res://window.tscn" id="8_xy4tn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v38iq"]
texture = ExtResource("1_dopym")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v8kj3"]
texture = ExtResource("2_ootpb")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_crycw"]
tile_size = Vector2i(64, 64)
sources/2 = SubResource("TileSetAtlasSource_v38iq")
sources/3 = SubResource("TileSetAtlasSource_v8kj3")

[sub_resource type="Curve2D" id="Curve2D_ootpb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 121, 320, 0, 0, 0, 0, 312, 326, 0, 0, 0, 0, 423, 346, 0, 0, 0, 0, 545, 332, 0, 0, 0, 0, 560, 263, 0, 0, 0, 0, 586, 321, 0, 0, 0, 0, 653, 344, 0, 0, 0, 0, 758, 352, 0, 0, 0, 0, 827, 354, 0, 0, 0, 0, 886, 353, 0, 0, 0, 0, 944, 341, 0, 0, 0, 0, 980, 350)
}
point_count = 12

[sub_resource type="Curve2D" id="Curve2D_v38iq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 281, 477, 0, 0, 0, 0, 379, 458, 0, 0, 0, 0, 538, 459, 0, 0, 0, 0, 708, 465, 0, 0, 0, 0, 802, 463, 0, 0, 0, 0, 828, 489, 0, 0, 0, 0, 831, 559, 0, 0, 0, 0, 810, 593, 0, 0, 0, 0, 741, 598, 0, 0, 0, 0, 628, 598, 0, 0, 0, 0, 487, 599, 0, 0, 0, 0, 343, 595, 0, 0, 0, 0, 281, 573, 0, 0, 0, 0, 281, 477)
}
point_count = 14

[node name="Node2D" type="Node2D" unique_id=444309336]

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1605334561]
tile_map_data = PackedByteArray("AAAAAAUAAgAAAAAAAAABAAUAAgAAAAAAAAACAAUAAgAAAAAAAAADAAUAAgAAAAAAAAAEAAUAAgAAAAAAAAAFAAUAAgAAAAAAAAAGAAUAAgAAAAAAAAAHAAUAAgAAAAAAAAAIAAUAAgAAAAAAAAAJAAUAAgAAAAAAAAAKAAUAAgAAAAAAAAALAAUAAgAAAAAAAAAMAAUAAgAAAAAAAAANAAUAAgAAAAAAAAAOAAUAAgAAAAAAAAAPAAUAAgAAAAAAAAAQAAUAAgAAAAAAAAARAAUAAgAAAAAAAAARAAYAAgAAAAAAAAAQAAYAAgAAAAAAAAAPAAYAAgAAAAAAAAAOAAYAAgAAAAAAAAANAAYAAgAAAAAAAAAMAAYAAgAAAAAAAAALAAYAAgAAAAAAAAAKAAYAAgAAAAAAAAAJAAYAAgAAAAAAAAAIAAYAAgAAAAAAAAAHAAYAAgAAAAAAAAAGAAYAAgAAAAAAAAAFAAYAAgAAAAAAAAAEAAYAAgAAAAAAAAADAAYAAgAAAAAAAAACAAYAAgAAAAAAAAABAAYAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAABAAcAAgAAAAAAAAACAAcAAgAAAAAAAAADAAcAAgAAAAAAAAAEAAcAAgAAAAAAAAAFAAcAAgAAAAAAAAAGAAcAAgAAAAAAAAAHAAcAAgAAAAAAAAAIAAcAAgAAAAAAAAAJAAcAAgAAAAAAAAAKAAcAAgAAAAAAAAALAAcAAgAAAAAAAAAMAAcAAgAAAAAAAAANAAcAAgAAAAAAAAAOAAcAAgAAAAAAAAAPAAcAAgAAAAAAAAAQAAcAAgAAAAAAAAARAAcAAgAAAAAAAAARAAgAAgAAAAAAAAAQAAgAAgAAAAAAAAAPAAgAAgAAAAAAAAAOAAgAAgAAAAAAAAANAAgAAgAAAAAAAAAMAAgAAgAAAAAAAAALAAgAAgAAAAAAAAAKAAgAAgAAAAAAAAAJAAgAAgAAAAAAAAAIAAgAAgAAAAAAAAAHAAgAAgAAAAAAAAAGAAgAAgAAAAAAAAAFAAgAAgAAAAAAAAAEAAgAAgAAAAAAAAADAAgAAgAAAAAAAAACAAgAAgAAAAAAAAABAAgAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAABAAkAAgAAAAAAAAACAAkAAgAAAAAAAAADAAkAAgAAAAAAAAAEAAkAAgAAAAAAAAAFAAkAAgAAAAAAAAAGAAkAAgAAAAAAAAAHAAkAAgAAAAAAAAAIAAkAAgAAAAAAAAAJAAkAAgAAAAAAAAAKAAkAAgAAAAAAAAALAAkAAgAAAAAAAAAMAAkAAgAAAAAAAAANAAkAAgAAAAAAAAAOAAkAAgAAAAAAAAAPAAkAAgAAAAAAAAAQAAkAAgAAAAAAAAARAAkAAgAAAAAAAAAAAAQAAgAAAAAAAAABAAQAAgAAAAAAAAACAAQAAgAAAAAAAAADAAQAAgAAAAAAAAAEAAQAAgAAAAAAAAAFAAQAAgAAAAAAAAAGAAQAAgAAAAAAAAAHAAQAAgAAAAAAAAAIAAQAAgAAAAAAAAAJAAQAAgAAAAAAAAAKAAQAAgAAAAAAAAALAAQAAgAAAAAAAAAQAAQAAgAAAAAAAAARAAQAAgAAAAAAAAAPAAQAAgAAAAAAAAAOAAQAAgAAAAAAAAANAAQAAgAAAAAAAAAMAAQAAgAAAAAAAAAAAAMAAwAAAAAAAAAAAAIAAwAAAAAAAAAAAAEAAwAAAAAAAAAAAAAAAwAAAAAAAAABAAAAAwAAAAAAAAABAAEAAwAAAAAAAAABAAIAAwAAAAAAAAABAAMAAwAAAAAAAAACAAMAAwAAAAAAAAACAAIAAwAAAAAAAAACAAEAAwAAAAAAAAACAAAAAwAAAAAAAAADAAAAAwAAAAAAAAAEAAEAAwAAAAAAAAADAAEAAwAAAAAAAAADAAIAAwAAAAAAAAADAAMAAwAAAAAAAAAEAAMAAwAAAAAAAAAFAAMAAwAAAAAAAAAGAAMAAwAAAAAAAAAHAAMAAwAAAAAAAAAIAAMAAwAAAAAAAAAJAAMAAwAAAAAAAAAKAAMAAwAAAAAAAAALAAMAAwAAAAAAAAAMAAMAAwAAAAAAAAANAAMAAwAAAAAAAAAOAAMAAwAAAAAAAAAPAAMAAwAAAAAAAAAQAAMAAwAAAAAAAAARAAMAAwAAAAAAAAARAAIAAwAAAAAAAAARAAEAAwAAAAAAAAARAAAAAwAAAAAAAAAQAAAAAwAAAAAAAAAPAAAAAwAAAAAAAAAOAAAAAwAAAAAAAAANAAAAAwAAAAAAAAAMAAAAAwAAAAAAAAALAAAAAwAAAAAAAAAKAAAAAwAAAAAAAAAJAAAAAwAAAAAAAAAIAAAAAwAAAAAAAAAHAAAAAwAAAAAAAAAGAAAAAwAAAAAAAAAFAAAAAwAAAAAAAAAEAAAAAwAAAAAAAAAFAAEAAwAAAAAAAAAGAAEAAwAAAAAAAAAHAAEAAwAAAAAAAAAIAAEAAwAAAAAAAAAJAAEAAwAAAAAAAAAKAAEAAwAAAAAAAAALAAEAAwAAAAAAAAAMAAEAAwAAAAAAAAANAAEAAwAAAAAAAAAOAAEAAwAAAAAAAAAPAAEAAwAAAAAAAAAQAAEAAwAAAAAAAAAQAAIAAwAAAAAAAAAPAAIAAwAAAAAAAAAOAAIAAwAAAAAAAAANAAIAAwAAAAAAAAAMAAIAAwAAAAAAAAALAAIAAwAAAAAAAAAKAAIAAwAAAAAAAAAJAAIAAwAAAAAAAAAIAAIAAwAAAAAAAAAHAAIAAwAAAAAAAAAGAAIAAwAAAAAAAAAFAAIAAwAAAAAAAAAEAAIAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_crycw")

[node name="EventHandler" type="Node" parent="." unique_id=1003265940]
script = ExtResource("3_ootpb")

[node name="RobberPath" type="Path2D" parent="." unique_id=2066214823]
curve = SubResource("Curve2D_ootpb")

[node name="PathFollow2D" type="PathFollow2D" parent="RobberPath" unique_id=1113245068]
position = Vector2(121, 320)
rotation = 0.03140329
rotates = false

[node name="Robber" parent="RobberPath/PathFollow2D" unique_id=1269839090 instance=ExtResource("4_v8kj3")]

[node name="GuardPath" type="Path2D" parent="." unique_id=1833167954]
curve = SubResource("Curve2D_v38iq")

[node name="PathFollow2D" type="PathFollow2D" parent="GuardPath" unique_id=180089368]
position = Vector2(281, 477)
rotation = -0.19150172
rotates = false

[node name="Guard" parent="GuardPath/PathFollow2D" unique_id=1914350391 instance=ExtResource("5_crycw")]

[node name="Flashlight" parent="GuardPath/PathFollow2D/Guard" unique_id=818948262 instance=ExtResource("6_crycw")]

[node name="Speaker" parent="." unique_id=1603124733 instance=ExtResource("7_i2041")]
position = Vector2(43, 518)

[node name="Window" parent="." unique_id=236289491 instance=ExtResource("8_xy4tn")]
position = Vector2(226, 186)

[node name="Window2" parent="." unique_id=336313960 instance=ExtResource("8_xy4tn")]
position = Vector2(411, 186)

[node name="Window3" parent="." unique_id=618868173 instance=ExtResource("8_xy4tn")]
position = Vector2(721, 186)

[node name="Window4" parent="." unique_id=1005587309 instance=ExtResource("8_xy4tn")]
position = Vector2(901, 186)

[connection signal="done_being_distracted" from="GuardPath/PathFollow2D/Guard" to="EventHandler" method="_on_guard_done_being_distracted"]
[connection signal="speaker_playing" from="Speaker" to="EventHandler" method="_on_speaker_speaker_playing"]
[connection signal="speaker_stopped" from="Speaker" to="EventHandler" method="_on_speaker_speaker_stopped"]
[connection signal="window_broken" from="Window" to="EventHandler" method="_on_window_window_broken"]
[connection signal="window_broken" from="Window2" to="EventHandler" method="_on_window_2_window_broken"]
[connection signal="window_broken" from="Window3" to="EventHandler" method="_on_window_3_window_broken"]
[connection signal="window_broken" from="Window4" to="EventHandler" method="_on_window_4_window_broken"]
